--- a/sass/components/_modal.scss
+++ b/sass/components/_modal.scss
@@ -23,16 +23,14 @@
   border: 1px solid rgba(0, 0, 0, 0.1);
   box-sizing: border-box;
   cursor: pointer;
-
   display: flex;
   align-items: center;
-
   transition: fill var(--animation);
-}
 
-.modal-close-btn:hover,
-.modal-close-btn:focus {
-  fill: var(--accent-color);
+  &:hover,
+  &:focus {
+    fill: var(--accent-color);
+  }
 }
 
 .is-hidden {
