--- a/sass/components/_portfolio-filter.scss
+++ b/sass/components/_portfolio-filter.scss
@@ -14,14 +14,14 @@
 
   transition: background-color var(--animation), color var(--animation),
     box-shadow var(--animation);
-}
 
-.filter-button:focus,
-.filter-button:hover {
-  background-color: var(--accent-color);
-  color: var(--main-color-white);
-  box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
-    0px 2px 2px rgba(0, 0, 0, 0.12);
+  &:focus,
+  &:hover {
+    background-color: var(--accent-color);
+    color: var(--main-color-white);
+    box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
+      0px 2px 2px rgba(0, 0, 0, 0.12);
+  }
 }
 
 .filter-list-button-vse {
@@ -42,10 +42,10 @@
   margin-bottom: 50px;
 }
 
-.filter-list-button:not(:last-child) {
-  margin-right: 8px;
-}
-
 .filter-list-button {
   display: flex;
+
+  &:not(:last-child) {
+    margin-right: 8px;
+  }
 }
