--- a/sass/components/_portfolio-project.scss
+++ b/sass/components/_portfolio-project.scss
@@ -15,13 +15,18 @@
 
 .project-list-link {
   transition: box-shadow var(--animation);
-}
 
-.project-list-link:hover,
-.project-list-link:focus {
-  box-sizing: border-box;
-  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
-    1px 4px 6px rgba(0, 0, 0, 0.16);
+  &:hover,
+  &:focus {
+    box-sizing: border-box;
+    box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
+      1px 4px 6px rgba(0, 0, 0, 0.16);
+  }
+  &:hover .overlay,
+  &:focus .overlay {
+    transform: translateY(0%);
+    opacity: 1;
+  }
 }
 
 .project-list-item-wrapper {
@@ -71,10 +76,4 @@
   opacity: 0;
 
   transition: transform var(--animation), opacity var(--animation);
-}
-
-.project-list-link:hover .overlay,
-.project-list-link:focus .overlay {
-  transform: translateY(0%);
-  opacity: 1;
 }
