--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -2,10 +2,14 @@
   background-color: rgb(47, 48, 58);
   padding-top: 60px;
   padding-bottom: 60px;
-}
 
-.footer .logo {
-  margin-bottom: 20px;
+  & .logo {
+    margin-bottom: 20px;
+  }
+  & .container {
+    display: flex;
+    align-items: baseline;
+  }
 }
 
 .contact-address {
@@ -15,6 +19,11 @@
   line-height: 1.71;
   color: var(--main-color-white);
   margin-bottom: 9px;
+
+  &:hover,
+  &:focus {
+    color: var(--accent-color);
+  }
 }
 
 .contact-list-link {
@@ -23,28 +32,25 @@
   line-height: 1.71;
   margin-bottom: 9px;
   color: rgba(255, 255, 255, 0.6);
-}
 
-.contact-list-link:hover,
-.contact-list-link:focus,
-.contact-address:hover,
-.contact-address:focus {
-  color: var(--accent-color);
+  &:hover,
+  &:focus {
+    color: var(--accent-color);
+  }
 }
 
 .footer-social-link {
   width: 270px;
   margin-right: 30px;
-}
 
-.footer-social-link .logo {
-  font-weight: bold;
-  font-size: 14px;
-  line-height: 1.14;
-  letter-spacing: 0.03em;
-  text-transform: uppercase;
-
-  color: var(--main-color-white);
+  & .logo {
+    font-weight: bold;
+    font-size: 14px;
+    line-height: 1.14;
+    letter-spacing: 0.03em;
+    text-transform: uppercase;
+    color: var(--main-color-white);
+  }
 }
 
 .social-link-item {
@@ -55,8 +61,12 @@
   height: 44px;
   border-radius: 50%;
   background: rgba(255, 255, 255, 0.1);
-
   transition: background-color var(--animation);
+
+  &:hover,
+  &:focus {
+    background-color: var(--accent-color);
+  }
 }
 
 .contact-social-item:not(:last-child) {
@@ -74,16 +84,6 @@
 
 .social-link-svg {
   fill: var(--icon-background-color);
-}
-
-.footer .container {
-  display: flex;
-  align-items: baseline;
-}
-
-.social-link-item:hover,
-.social-link-item:focus {
-  background-color: var(--accent-color);
 }
 
 .footer-input {
@@ -119,20 +119,18 @@
   filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
   border-radius: 4px;
   color: var(--main-color-white);
-
   cursor: pointer;
-}
 
-.footer-input-form:focus {
-  outline: none;
-  border-color: var(--accent-color);
+  &:focus {
+    outline: none;
+    border-color: var(--accent-color);
+  }
 }
 
 .footer-form-btn {
   display: flex;
   justify-content: center;
   align-items: center;
-
   min-width: 200px;
   margin-left: 12px;
   font-weight: bold;
@@ -141,9 +139,7 @@
   letter-spacing: 0.06em;
   padding: 8px 26px;
   cursor: pointer;
-
   color: var(--main-color-white);
-
   background: #2196f3;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
   border-radius: 4px;
