--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -1,8 +1,21 @@
-.header .logo {
-  margin-right: 93px;
-  padding-top: 24px;
-  padding-bottom: 25px;
+header {
+  background-color: var(--bg-color-white);
+  border: 1px solid rgb(236, 236, 236);
+  border-top: 0;
+  border-left: 0;
+  border-right: 0;
+
+  & .logo {
+    margin-right: 93px;
+    padding-top: 24px;
+    padding-bottom: 25px;
+  }
+  & .container {
+    display: flex;
+    align-items: center;
+  }
 }
+
 .navigation {
   display: flex;
   align-items: center;
@@ -11,6 +24,11 @@
 .navigation-list {
   display: flex;
   align-items: center;
+
+  & .current {
+    position: relative;
+    color: var(--accent-color);
+  }
 }
 
 .contact-header {
@@ -18,59 +36,39 @@
   align-items: center;
   margin-left: auto;
 }
-.header .container {
-  display: flex;
-  align-items: center;
-}
 
 .contact-header-list {
   display: flex;
   align-items: center;
+
+  &:not(:last-child) {
+    margin-right: 50px;
+  }
 }
 
 .contact-svg-logo {
   margin-right: 10px;
-
   transition: fill var(--animation);
-}
-
-.contact-header-list:not(:last-child) {
-  margin-right: 50px;
 }
 
 .navigation-item:not(:last-child) {
   margin-right: 50px;
 }
 
-header {
-  background-color: var(--bg-color-white);
-  border: 1px solid rgb(236, 236, 236);
-  border-top: 0;
-  border-left: 0;
-  border-right: 0;
-}
-.navigation-link:hover,
-.navigation-link:focus,
-.contact-header-link:hover,
-.contact-header-link:focus {
-  color: var(--accent-color);
-}
 .navigation-link {
   font-weight: 500;
   font-size: 14px;
   line-height: 1.14;
   letter-spacing: 0.02em;
   color: var(--main-color);
-
   padding-top: 32px;
   padding-bottom: 32px;
-
   transition: color var(--animation);
-}
 
-.contact-header-link:focus svg,
-.contact-header-link:hover svg {
-  fill: var(--accent-color);
+  &:hover,
+  &:focus {
+    color: var(--accent-color);
+  }
 }
 
 .contact-header-link {
@@ -84,14 +82,16 @@ header {
   line-height: 1.14;
   letter-spacing: 0.02em;
   color: rgb(117, 117, 117);
-
   padding-top: 32px;
   padding-bottom: 32px;
-
   transition: color var(--animation);
-}
 
-.navigation-list .current {
-  position: relative;
-  color: var(--accent-color);
+  &:hover,
+  &:focus {
+    color: var(--accent-color);
+  }
+  &:focus svg,
+  &:hover svg {
+    fill: var(--accent-color);
+  }
 }
