--- a/sass/layout/_what-are-we-doing.scss
+++ b/sass/layout/_what-are-we-doing.scss
@@ -1,10 +1,11 @@
 .what-are-we-doing {
   padding-bottom: var(--section-pb);
+
+  & .title {
+    margin-bottom: 50px;
+  }
 }
 
-.what-are-we-doing .title {
-  margin-bottom: 50px;
-}
 .services-list {
   flex-wrap: wrap;
   display: flex;
