--- a/sass/base/_container.scss
+++ b/sass/base/_container.scss
@@ -3,4 +3,13 @@
   margin: 0 auto;
   padding-left: 15px;
   padding-right: 15px;
+
+  .footer & {
+    display: flex;
+    align-items: baseline;
+  }
+  header & {
+    display: flex;
+    align-items: center;
+  }
 }
