--- a/sass/base/_current.scss
+++ b/sass/base/_current.scss
@@ -1,12 +1,18 @@
-.current::after {
-  display: inline-block;
-  position: absolute;
+.current {
+  &::after {
+    display: inline-block;
+    position: absolute;
 
-  bottom: -1px;
-  left: 0;
-  content: "";
-  width: 100%;
-  height: 4px;
-  border-radius: 2px;
-  background-color: var(--accent-color);
+    bottom: -1px;
+    left: 0;
+    content: "";
+    width: 100%;
+    height: 4px;
+    border-radius: 2px;
+    background-color: var(--accent-color);
+  }
+  .navigation-list & {
+    position: relative;
+    color: var(--accent-color);
+  }
 }
