--- a/sass/components/_logo.scss
+++ b/sass/components/_logo.scss
@@ -4,6 +4,23 @@
   font-size: 26px;
   line-height: 1.19;
   letter-spacing: 0.03em;
+
+  .footer & {
+    margin-bottom: 20px;
+  }
+  .footer-social-link & {
+    font-weight: bold;
+    font-size: 14px;
+    line-height: 1.14;
+    letter-spacing: 0.03em;
+    text-transform: uppercase;
+    color: var(--main-color-white);
+  }
+  header & {
+    margin-right: 93px;
+    padding-top: 24px;
+    padding-bottom: 25px;
+  }
 }
 
 .first-part {
