--- a/sass/components/_portfolio-project.scss
+++ b/sass/components/_portfolio-project.scss
@@ -22,11 +22,6 @@
     box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
       1px 4px 6px rgba(0, 0, 0, 0.16);
   }
-  &:hover .overlay,
-  &:focus .overlay {
-    transform: translateY(0%);
-    opacity: 1;
-  }
 }
 
 .project-list-item-wrapper {
@@ -63,9 +58,7 @@
   font-size: 18px;
   line-height: 1.55;
   letter-spacing: 0.03em;
-
   color: var(--main-color-white);
-
   position: absolute;
   top: 0;
   left: 0;
@@ -74,6 +67,11 @@
   padding: 63px 24px 63px 24px;
   transform: translateY(100%);
   opacity: 0;
-
   transition: transform var(--animation), opacity var(--animation);
+
+  .project-list-link:hover &,
+  .project-list-link:focus & {
+    transform: translateY(0%);
+    opacity: 1;
+  }
 }
