--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -2,14 +2,6 @@
   background-color: rgb(47, 48, 58);
   padding-top: 60px;
   padding-bottom: 60px;
-
-  & .logo {
-    margin-bottom: 20px;
-  }
-  & .container {
-    display: flex;
-    align-items: baseline;
-  }
 }
 
 .contact-address {
@@ -42,15 +34,6 @@
 .footer-social-link {
   width: 270px;
   margin-right: 30px;
-
-  & .logo {
-    font-weight: bold;
-    font-size: 14px;
-    line-height: 1.14;
-    letter-spacing: 0.03em;
-    text-transform: uppercase;
-    color: var(--main-color-white);
-  }
 }
 
 .social-link-item {
@@ -69,8 +52,10 @@
   }
 }
 
-.contact-social-item:not(:last-child) {
-  margin-right: 10px;
+.contact-social-item {
+  &:not(:last-child) {
+    margin-right: 10px;
+  }
 }
 
 .footer-address-contact {
