--- a/sass/components/_logo.scss
+++ b/sass/components/_logo.scss
@@ -23,16 +23,16 @@
   }
 }
 
-.first-part {
+.logo__first-part {
   color: var(--accent-color);
 }
-.second-part {
+.logo__second-part {
   color: var(--main-color-black);
 }
 
-.logo-light-theme {
+.logo__light-theme {
   color: var(--main-color-black);
 }
-.logo-dark-theme {
+.logo__dark-theme {
   color: var(--main-color-white);
 }
