--- a/css/main.css
+++ b/css/main.css
@@ -90,7 +90,7 @@ header .container {
   background-color: var(--accent-color);
 }
 
-.navigation-list .current {
+.menu .current {
   position: relative;
   color: var(--accent-color);
 }
@@ -122,19 +122,19 @@ header .logo {
   padding-bottom: 25px;
 }
 
-.first-part {
+.logo__first-part {
   color: var(--accent-color);
 }
 
-.second-part {
+.logo__second-part {
   color: var(--main-color-black);
 }
 
-.logo-light-theme {
+.logo__light-theme {
   color: var(--main-color-black);
 }
 
-.logo-dark-theme {
+.logo__dark-theme {
   color: var(--main-color-white);
 }
 
@@ -359,7 +359,7 @@ header {
   align-items: center;
 }
 
-.navigation-list {
+.menu {
   display: flex;
   align-items: center;
 }
@@ -384,11 +384,11 @@ header {
   transition: fill var(--animation);
 }
 
-.navigation-item:not(:last-child) {
+.menu__item:not(:last-child) {
   margin-right: 50px;
 }
 
-.navigation-link {
+.menu__link {
   font-weight: 500;
   font-size: 14px;
   line-height: 1.14;
@@ -399,7 +399,7 @@ header {
   transition: color var(--animation);
 }
 
-.navigation-link:hover, .navigation-link:focus {
+.menu__link:hover, .menu__link:focus {
   color: var(--accent-color);
 }
 
