--- a/sass/base/_current.scss
+++ b/sass/base/_current.scss
@@ -11,7 +11,7 @@
     border-radius: 2px;
     background-color: var(--accent-color);
   }
-  .navigation-list & {
+  .menu & {
     position: relative;
     color: var(--accent-color);
   }
