--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -11,7 +11,7 @@ header {
   align-items: center;
 }
 
-.navigation-list {
+.menu {
   display: flex;
   align-items: center;
 }
@@ -36,11 +36,11 @@ header {
   transition: fill var(--animation);
 }
 
-.navigation-item:not(:last-child) {
+.menu__item:not(:last-child) {
   margin-right: 50px;
 }
 
-.navigation-link {
+.menu__link {
   font-weight: 500;
   font-size: 14px;
   line-height: 1.14;
