--- a/sass/layout/_hero.scss
+++ b/sass/layout/_hero.scss
@@ -14,7 +14,7 @@
   margin: 0 auto;
 }
 
-.hero-title {
+.hero__title {
   min-width: 696px;
   padding-right: 252px;
   padding-left: 252px;
@@ -27,7 +27,7 @@
   color: var(--main-color-white);
 }
 
-.modal-btn {
+.hero__modal-btn {
   min-width: 200px;
   padding: 10px 32px;
   border: none;
