--- a/sass/layout/_team.scss
+++ b/sass/layout/_team.scss
@@ -4,7 +4,7 @@
   padding-bottom: var(--section-pb);
 }
 
-.team-list-content-wrapper {
+.wrapper-team {
   background-color: var(--bg-color-white);
   padding: 30px 30px;
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
@@ -13,7 +13,7 @@
   border-radius: 0px 0px 4px 4px;
 }
 
-.team-list-item {
+.team-list__item {
   flex-basis: calc(100% / 4 - 30px);
   margin-left: 30px;
   margin-top: 30px;
@@ -26,7 +26,7 @@
   margin-top: -30px;
 }
 
-.team-list-title {
+.wrapper-team__title {
   font-weight: 500;
   font-size: 16px;
   line-height: 1.19;
@@ -35,7 +35,7 @@
   margin-bottom: 10px;
 }
 
-.team-text {
+.wrapper-team__text {
   font-weight: 400;
   font-size: 16px;
   line-height: 1.19;
@@ -43,14 +43,14 @@
   text-align: center;
 }
 
-.team-list-svg {
+.svg-list {
   display: flex;
   align-items: center;
   justify-content: space-between;
   margin-top: 16px;
 }
 
-.team-list-link-svg {
+.svg-list__link-svg {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -66,14 +66,14 @@
   }
 }
 
-.team-list-icon {
+.svg-list__icon {
   width: 20px;
   height: 20px;
   fill: var(--icon-color-passive);
   transition: fill var(--animation);
 
-  .team-list-link-svg:hover &,
-  .team-list-link-svg:focus & {
+  .svg-list__link-svg:hover &,
+  .svg-list__link-svg:focus & {
     fill: var(--icon-background-color);
   }
 }
