--- a/css/main.css
+++ b/css/main.css
@@ -563,14 +563,14 @@ header {
   padding-bottom: var(--section-pb);
 }
 
-.team-list-content-wrapper {
+.wrapper-team {
   background-color: var(--bg-color-white);
   padding: 30px 30px;
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 0px 0px 4px 4px;
 }
 
-.team-list-item {
+.team-list__item {
   flex-basis: calc(100% / 4 - 30px);
   margin-left: 30px;
   margin-top: 30px;
@@ -583,7 +583,7 @@ header {
   margin-top: -30px;
 }
 
-.team-list-title {
+.wrapper-team__title {
   font-weight: 500;
   font-size: 16px;
   line-height: 1.19;
@@ -592,7 +592,7 @@ header {
   margin-bottom: 10px;
 }
 
-.team-text {
+.wrapper-team__text {
   font-weight: 400;
   font-size: 16px;
   line-height: 1.19;
@@ -600,14 +600,14 @@ header {
   text-align: center;
 }
 
-.team-list-svg {
+.svg-list {
   display: flex;
   align-items: center;
   justify-content: space-between;
   margin-top: 16px;
 }
 
-.team-list-link-svg {
+.svg-list__link-svg {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -618,19 +618,19 @@ header {
   transition: background-color var(--animation);
 }
 
-.team-list-link-svg:hover, .team-list-link-svg:focus {
+.svg-list__link-svg:hover, .svg-list__link-svg:focus {
   background-color: var(--accent-color);
 }
 
-.team-list-icon {
+.svg-list__icon {
   width: 20px;
   height: 20px;
   fill: var(--icon-color-passive);
   transition: fill var(--animation);
 }
 
-.team-list-link-svg:hover .team-list-icon,
-.team-list-link-svg:focus .team-list-icon {
+.svg-list__link-svg:hover .svg-list__icon,
+.svg-list__link-svg:focus .svg-list__icon {
   fill: var(--icon-background-color);
 }
 
@@ -644,7 +644,7 @@ header {
   justify-content: space-between;
 }
 
-.container-link {
+.customers-list__link {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -656,17 +656,17 @@ header {
   transition: border-color var(--animation);
 }
 
-.container-link:hover, .container-link:focus {
+.customers-list__link:hover, .customers-list__link:focus {
   border-color: var(--accent-color);
 }
 
-.container-customers-logo {
+.customers-list__logo {
   fill: var(--icon-color-passive);
   transition: fill var(--animation);
 }
 
-.container-link:hover .container-customers-logo,
-.container-link:focus .container-customers-logo {
+.customers-list__link:hover .customers-list__logo,
+.customers-list__link:focus .customers-list__logo {
   fill: var(--accent-color);
 }
 
