--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -16,13 +16,38 @@ header {
   align-items: center;
 }
 
-.contact-header {
+.menu__link {
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 1.14;
+  letter-spacing: 0.02em;
+
+  &:hover,
+  &:focus {
+    color: var(--accent-color);
+  }
+}
+
+.header__link {
+  padding-top: 32px;
+  padding-bottom: 32px;
+  color: var(--main-color);
+}
+
+.header__link_animation {
+  transition: color var(--animation);
+}
+
+.contact {
   display: flex;
   align-items: center;
+}
+
+.header__contact {
   margin-left: auto;
 }
 
-.contact-header-list {
+.contact__list {
   display: flex;
   align-items: center;
 
@@ -40,23 +65,7 @@ header {
   margin-right: 50px;
 }
 
-.menu__link {
-  font-weight: 500;
-  font-size: 14px;
-  line-height: 1.14;
-  letter-spacing: 0.02em;
-  color: var(--main-color);
-  padding-top: 32px;
-  padding-bottom: 32px;
-  transition: color var(--animation);
-
-  &:hover,
-  &:focus {
-    color: var(--accent-color);
-  }
-}
-
-.contact-header-link {
+.contact__link {
   display: flex;
   align-items: center;
   flex-direction: row;
@@ -69,7 +78,6 @@ header {
   color: rgb(117, 117, 117);
   padding-top: 32px;
   padding-bottom: 32px;
-  transition: color var(--animation);
 
   &:hover,
   &:focus {
@@ -79,4 +87,8 @@ header {
   &:hover svg {
     fill: var(--accent-color);
   }
+}
+
+.contact__link_animation {
+  transition: color var(--animation);
 }
