--- a/sass/layout/_hero.scss
+++ b/sass/layout/_hero.scss
@@ -1,6 +1,4 @@
 .hero {
-  padding-top: 200px;
-  padding-bottom: 200px;
   background-color: rgb(47, 48, 58);
   text-align: center;
   background-image: linear-gradient(
@@ -11,6 +9,10 @@
   background-repeat: no-repeat;
   background-size: cover;
   max-width: 1600px;
+}
+.hero__section {
+  padding-top: 200px;
+  padding-bottom: 200px;
   margin: 0 auto;
 }
 
