--- a/css/main.css
+++ b/css/main.css
@@ -156,10 +156,6 @@ header .container {
   margin-bottom: 50px;
 }
 
-.what-are-we-doing .title {
-  margin-bottom: 50px;
-}
-
 .modal {
   position: absolute;
   top: 50%;
@@ -508,6 +504,9 @@ header {
   flex-wrap: wrap;
   display: flex;
   align-items: center;
+}
+
+.feature-list__list {
   margin-left: -30px;
   margin-top: -30px;
 }
@@ -533,6 +532,10 @@ header {
 
 .what-are-we-doing {
   padding-bottom: var(--section-pb);
+}
+
+.what-are-we-doing__title {
+  margin-bottom: 50px;
 }
 
 .services-list {
