--- a/sass/layout/_features.scss
+++ b/sass/layout/_features.scss
@@ -23,6 +23,9 @@
   flex-wrap: wrap;
   display: flex;
   align-items: center;
+}
+
+.feature-list__list {
   margin-left: -30px;
   margin-top: -30px;
 }
