--- a/sass/layout/_what-are-we-doing.scss
+++ b/sass/layout/_what-are-we-doing.scss
@@ -2,6 +2,10 @@
   padding-bottom: var(--section-pb);
 }
 
+.what-are-we-doing__title {
+  margin-bottom: 50px;
+}
+
 .services-list {
   flex-wrap: wrap;
   display: flex;
