--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -103,19 +103,6 @@ header .container {
   letter-spacing: 0.03em;
 }
 
-.footer .logo {
-  margin-bottom: 20px;
-}
-
-.footer-social-link .logo {
-  font-weight: bold;
-  font-size: 14px;
-  line-height: 1.14;
-  letter-spacing: 0.03em;
-  text-transform: uppercase;
-  color: var(--main-color-white);
-}
-
 .header__logo {
   margin-right: 93px;
   padding-top: 24px;
@@ -359,20 +346,23 @@ header {
   padding-bottom: 60px;
 }
 
-.contact-address {
+.address__contact-link {
   font-family: var(--main-font);
   font-weight: 400;
   font-size: 14px;
   line-height: 1.71;
+}
+
+.address__contact-link:hover, .address__contact-link:focus {
+  color: var(--accent-color);
+}
+
+.footer__contact-link {
   color: var(--main-color-white);
   margin-bottom: 9px;
 }
 
-.contact-address:hover, .contact-address:focus {
-  color: var(--accent-color);
-}
-
-.contact-list-link {
+.address__contact-list-link {
   font-weight: 400;
   font-size: 14px;
   line-height: 1.71;
@@ -380,13 +370,23 @@ header {
   color: rgba(255, 255, 255, 0.6);
 }
 
-.contact-list-link:hover, .contact-list-link:focus {
+.address__contact-list-link:hover, .address__contact-list-link:focus {
   color: var(--accent-color);
 }
 
-.footer-social-link {
+.footer__social-link {
   width: 270px;
   margin-right: 30px;
+}
+
+.footer__title {
+  font-weight: bold;
+  font-size: 14px;
+  line-height: 1.14;
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
+  color: var(--main-color-white);
+  margin-bottom: 20px;
 }
 
 .social-link-item {
@@ -408,7 +408,7 @@ header {
   margin-right: 10px;
 }
 
-.footer-address-contact {
+.footer__contact {
   width: 270px;
   margin-right: 30px;
 }
