--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -4,13 +4,11 @@
   padding-bottom: 60px;
 }
 
-.contact-address {
+.address__contact-link {
   font-family: var(--main-font);
   font-weight: 400;
   font-size: 14px;
   line-height: 1.71;
-  color: var(--main-color-white);
-  margin-bottom: 9px;
 
   &:hover,
   &:focus {
@@ -18,7 +16,12 @@
   }
 }
 
-.contact-list-link {
+.footer__contact-link {
+  color: var(--main-color-white);
+  margin-bottom: 9px;
+}
+
+.address__contact-list-link {
   font-weight: 400;
   font-size: 14px;
   line-height: 1.71;
@@ -31,9 +34,19 @@
   }
 }
 
-.footer-social-link {
+.footer__social-link {
   width: 270px;
   margin-right: 30px;
+}
+
+.footer__title {
+  font-weight: bold;
+  font-size: 14px;
+  line-height: 1.14;
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
+  color: var(--main-color-white);
+  margin-bottom: 20px;
 }
 
 .social-link-item {
@@ -58,7 +71,7 @@
   }
 }
 
-.footer-address-contact {
+.footer__contact {
   width: 270px;
   margin-right: 30px;
 }
