--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -49,7 +49,7 @@
   margin-bottom: 20px;
 }
 
-.social-link-item {
+.footer__social-link-item {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -65,7 +65,7 @@
   }
 }
 
-.contact-social-item {
+.footer__contact-item {
   &:not(:last-child) {
     margin-right: 10px;
   }
@@ -76,19 +76,19 @@
   margin-right: 30px;
 }
 
-.contact-list-social-link {
+.footer__contact-link {
   display: flex;
 }
 
-.social-link-svg {
+.footer__social-link-svg {
   fill: var(--icon-background-color);
 }
 
-.footer-input {
+.footer__input {
   width: 570px;
 }
 
-.footer-input-text {
+.input__text {
   font-weight: bold;
   text-transform: uppercase;
   font-size: 14px;
@@ -97,16 +97,19 @@
   color: var(--main-color-white);
 }
 
-.footer-form-btn-svg {
+.footer__btn-svg {
   margin-left: 10px;
 }
 
-.footer-input-email {
+.input__email {
   display: flex;
+}
+
+.footer__email {
   margin-top: 20px;
 }
 
-.footer-input-form {
+.input__form {
   background: transparent;
   display: flex;
   width: 358px;
@@ -125,21 +128,24 @@
   }
 }
 
-.footer-form-btn {
+.input__form-btn {
   display: flex;
   justify-content: center;
   align-items: center;
   min-width: 200px;
-  margin-left: 12px;
   font-weight: bold;
   font-size: 16px;
   line-height: 1.875;
   letter-spacing: 0.06em;
-  padding: 8px 26px;
   cursor: pointer;
   color: var(--main-color-white);
   background: #2196f3;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
   border-radius: 4px;
   border-color: var(--accent-color);
+}
+
+.footer__form-btn {
+  margin-left: 12px;
+  padding: 8px 26px;
 }
