--- a/css/main.css
+++ b/css/main.css
@@ -263,6 +263,8 @@ header .container {
   letter-spacing: 0.03em;
   margin-top: 20px;
   color: #757575;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .modal-form-check-desc::before {
@@ -709,6 +711,10 @@ header {
   color: var(--accent-color);
 }
 
+.footer__logo {
+  margin-bottom: 20px;
+}
+
 .footer__social-link {
   width: 270px;
   margin-right: 30px;
@@ -737,6 +743,10 @@ header {
 
 .footer__social-link-item:hover, .footer__social-link-item:focus {
   background-color: var(--accent-color);
+}
+
+.footer__contact-item {
+  margin-top: 20px;
 }
 
 .footer__contact-item:not(:last-child) {
