--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -374,6 +374,10 @@ header {
   color: var(--accent-color);
 }
 
+.footer__logo {
+  margin-bottom: 20px;
+}
+
 .footer__social-link {
   width: 270px;
   margin-right: 30px;
@@ -402,6 +406,10 @@ header {
 
 .footer__social-link-item:hover, .footer__social-link-item:focus {
   background-color: var(--accent-color);
+}
+
+.footer__contact-item {
+  margin-top: 20px;
 }
 
 .footer__contact-item:not(:last-child) {
