--- a/sass/components/_modal-form.scss
+++ b/sass/components/_modal-form.scss
@@ -83,6 +83,8 @@
   letter-spacing: 0.03em;
   margin-top: 20px;
   color: rgb(117, 117, 117);
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .modal-form-check-desc::before {
