--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -34,6 +34,10 @@
   }
 }
 
+.footer__logo {
+  margin-bottom: 20px;
+}
+
 .footer__social-link {
   width: 270px;
   margin-right: 30px;
@@ -66,6 +70,7 @@
 }
 
 .footer__contact-item {
+  margin-top: 20px;
   &:not(:last-child) {
     margin-right: 10px;
   }
